1.5.0
-----
1. Add option to set progressbar colour.
2. Add options to have squared sliders and/or scrollbar sliders even when
   general setting set to round.
3. Add option to use menubar colours for popup menus.

1.4.1
-----
1. When drawing button-like checks and radios, do not drawn sunken if they are in
   a list/tree view.
2. Fix segfault on some systems due to gdk_x11_get_default_xdisplay usage.

1.4.0
-----
 1. Add striped window and menu background options.
 2. Added options to not square frames and tab frames.
 3. Animate faded progressbars when animation enabled.
 4. Blend menubar and window titlebar gradients if:
         menubar, titlebar, and inactive titlebar gradients match AND
         not blending titlebar gradient AND
         using window titlebar colour for menubar AND
         extending window drag into menubar
 5. Default titlebar colours to window colours - matches KDE4 default.
 6. If using window border colours as menubar colours, and the active and inactive
    titlebar colours are the same, then always use the active titlebar text colour
    for the menubar.
 7. When shading menubars only when active, or using window border colours as menubar
    colours, track the active window using a X11 event sent from the QtCurve kwin
    decoration.
 8. Fix border of radio buttons when general round setting is set to square.
 9. Always use a 1 pixel border for toolbars - as using a border of 0 can cause
    items of adjoining locked toolbars to be too close.
10. Add separator to messafge dialog boxes - matches KDE.
11. Add option to act upon titlebar buttons to hide menubar and statusbars.
12. Fix plain/round sliders being rotated when using a custom slider width.

1.3.0
-----
 1. Add option to use kwin titlebar colours as menubar shade.
 2. Add option to hide status bars via Ctrl-Alt-S
 3. Add option to drag windows by menubar.
 4. Better check/radio positioning.
 5. Fix background painting with some toolbars.
 6. Draw window frames square.